--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "typeorm:run": "typeorm-ts-node-commonjs migration:run -d src/data-source.ts",
     "start": "node dist/src/server.js",
     "build": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "swagger-autogen" : "node src/swagger.ts" 
   },
   "dependencies": {
+    "@types/swagger-ui-express": "^4.1.3",
     "axios": "^1.3.2",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
@@ -26,6 +28,9 @@
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
+    "swagger": "^0.7.5",
+    "swagger-autogen": "^2.23.0",
+    "swagger-ui-express": "^4.6.0",
     "typeorm": "^0.3.11",
     "yup": "^0.32.11"
   },
