--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "typeorm:run": "typeorm-ts-node-commonjs migration:run -d src/data-source.ts",
     "start": "node dist/src/server.js",
     "build": "tsc",
-    "test": "jest",
-    "swagger-autogen" : "node src/swagger.ts" 
+    "test": "clear && cross-env NODE_ENV=test SECRET_KEY=123 jest --verbose",
+    "swagger-autogen": "node src/swagger.ts"
   },
   "dependencies": {
     "@types/swagger-ui-express": "^4.1.3",
@@ -43,7 +43,7 @@
     "@types/node": "^18.11.18",
     "@types/supertest": "^2.0.12",
     "cross-env": "^7.0.3",
-    "jest": "^29.4.1",
+    "jest": "^29.4.2",
     "sqlite3": "^5.1.4",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
