feat:add away documentation in README.md

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 POSTGRES_DB=
-POSTGRES_PORT=
+POSTGRES_PORT=5433
 PORT=
 
-DATABASE_URL=postgres://user:password@host:postgress_port/postgres_database
+DATABASE_URL=postgres://user:password@db_back_end:5432/postgres_database
 
 SECRET_KEY=
